fix: styling issues Changed the hex values of colors by their correspinding carbon colors Changed the spacing values by their corresponding carbon variables Added a new object for the user account link

--- a/components/navbar/index.scss
+++ b/components/navbar/index.scss
@@ -42,27 +42,27 @@ $nav-item--spacing-x: $spacing-06;
 
   &__menu__account {
     display: inline-flex;
-    max-width: 20rem;
-    background-color: #6929c4;
+    max-width: calc($spacing-13 * 2);
+    background-color: $carbon--purple-70;
     outline: 0;
 
     &__link {
-      padding: calc(0.875rem - 5px) 16px;
-      border-width: 1px;
+      padding: calc($spacing-05 - $spacing-02) $spacing-05;
+      border-width: calc($spacing-01 / 2);
       border-style: solid;
       border-color: transparent;
-      color: white;
+      color: $carbon--white-0;
 
       svg {
         display: block;
         overflow: hidden;
         box-sizing: border-box;
-        width: 2rem;
-        height: 2rem;
-        padding-top: 1px;
-        border: 2px solid #fff;
+        width: $spacing-07;
+        height: $spacing-07;
+        padding-top: calc($spacing-01 / 2);
+        border: $spacing-01 solid $carbon--white-0;
         border-radius: 50%;
-        fill: #fff;
+        fill: $carbon--white-0;
       }
     }
   }
